// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Axis/WXAxis Should be render correctly 1`] = `
<g id="WXAxis">
  <line x1="40" y1="376" x2="580" y2="376" stroke="#cccccc"></line>
  <g text-anchor="middle">
    <line x1="60" y1="376" x2="60" y2="381" stroke="#cccccc"></line>
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="60" y="396" dy="" index="0" value="Page A" styles="[object Object]"></WTickText-stub>
  </g>
  <g text-anchor="middle">
    <line x1="310" y1="376" x2="310" y2="381" stroke="#cccccc"></line>
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="310" y="396" dy="" index="1" value="Page B" styles="[object Object]"></WTickText-stub>
  </g>
  <g text-anchor="middle">
    <line x1="560" y1="376" x2="560" y2="381" stroke="#cccccc"></line>
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="560" y="396" dy="" index="2" value="Page C" styles="[object Object]"></WTickText-stub>
  </g> <svg width="100%" height="100%"><text x="580" y="401" text-anchor="end" style="font-size: 12; fill: #414141; font-weight: 800;">
      X Axis
    </text></svg>
  <!---->
</g>
`;

exports[`Axis/WXAxis Should be render correctly with negative values 1`] = `
<g id="WXAxis">
  <line x1="40" y1="376" x2="580" y2="376" stroke="#cccccc"></line>
  <g text-anchor="middle">
    <line x1="60" y1="376" x2="60" y2="381" stroke="#cccccc"></line>
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="60" y="396" dy="" index="0" value="Page A" styles="[object Object]"></WTickText-stub>
  </g>
  <g text-anchor="middle">
    <line x1="310" y1="376" x2="310" y2="381" stroke="#cccccc"></line>
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="310" y="396" dy="" index="1" value="Page B" styles="[object Object]"></WTickText-stub>
  </g>
  <g text-anchor="middle">
    <line x1="560" y1="376" x2="560" y2="381" stroke="#cccccc"></line>
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="560" y="396" dy="" index="2" value="Page C" styles="[object Object]"></WTickText-stub>
  </g> <svg width="100%" height="100%"><text x="580" y="401" text-anchor="end" style="font-size: 12; fill: #414141; font-weight: 800;">
      X Axis
    </text></svg>
  <line x1="40" y1="0" x2="580" y2="0" style="stroke: #999; stroke-width: 1; stroke-dasharray: 0;"></line>
</g>
`;

exports[`Axis/WXAxis Should be render correctly without line 1`] = `
<g id="WXAxis">
  <!---->
  <g text-anchor="middle">
    <line x1="60" y1="376" x2="60" y2="381" stroke="#cccccc"></line>
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="60" y="396" dy="" index="0" value="Page A" styles="[object Object]"></WTickText-stub>
  </g>
  <g text-anchor="middle">
    <line x1="310" y1="376" x2="310" y2="381" stroke="#cccccc"></line>
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="310" y="396" dy="" index="1" value="Page B" styles="[object Object]"></WTickText-stub>
  </g>
  <g text-anchor="middle">
    <line x1="560" y1="376" x2="560" y2="381" stroke="#cccccc"></line>
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="560" y="396" dy="" index="2" value="Page C" styles="[object Object]"></WTickText-stub>
  </g> <svg width="100%" height="100%"><text x="580" y="401" text-anchor="end" style="font-size: 12; fill: #414141; font-weight: 800;">
      X Axis
    </text></svg>
  <!---->
</g>
`;

exports[`Axis/WXAxis Should be render correctly without ticks lines 1`] = `
<g id="WXAxis">
  <line x1="40" y1="376" x2="580" y2="376" stroke="#cccccc"></line>
  <g text-anchor="middle">
    <!---->
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="60" y="396" dy="" index="0" value="Page A" styles="[object Object]"></WTickText-stub>
  </g>
  <g text-anchor="middle">
    <!---->
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="310" y="396" dy="" index="1" value="Page B" styles="[object Object]"></WTickText-stub>
  </g>
  <g text-anchor="middle">
    <!---->
    <WTickText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#6e19ff,#dfbd46" x="560" y="396" dy="" index="2" value="Page C" styles="[object Object]"></WTickText-stub>
  </g> <svg width="100%" height="100%"><text x="580" y="401" text-anchor="end" style="font-size: 12; fill: #414141; font-weight: 800;">
      X Axis
    </text></svg>
  <!---->
</g>
`;
